fixed some margin spacings on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -23,15 +23,16 @@
   background-color: var(--bs-primary);
   border-top-right-radius: 40px;
   border-bottom-right-radius: 40px;
+  height: 80dvh;
+  display: flex;
 }
 
 .content {
   display: flex;
   flex-direction: column;
   margin-left: 2.5rem;
-  margin-top: 8rem;
-  margin-bottom: 8rem;
   width: 80%;
+  align-content: center;
 }
 .content li {
   list-style-type: '- ';
@@ -41,7 +42,7 @@
 }
 
 .learn-more {
-  margin-top: 3rem;
+  margin-top: 5%;
   border-width: 4px;
   font-size: 1.2em;
   border-radius: 10px;
